--- a/about.html
+++ b/about.html
@@ -2,10 +2,11 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title>Page Title</title>
+        <title>About me</title>
     </head>
 
     <body>
+        <h2>About me... coming soon</h2>
     </body>
 
 </html>
