--- a/index.html
+++ b/index.html
@@ -3,9 +3,32 @@
     <head>
         <meta charset="utf-8"/>
         <title>Page Title</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
+        <div class="container">
+            <div class="nav-wrapper">
+                <div class="left-side">
+                    
+                    <div class="nav-link-wrapper">
+                        <a href="index.html">Home</a>
+                    </div> 
+
+                    <div class="nav-link-wrapper">
+                        <a href="about.html">About</a>
+                    </div>
+
+                </div>
+
+                <div class="right-side">
+                    <div class="brand">
+                        <div>GUILHERME SILVA</div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </body>
 
 </html>
